Added functionality to extract health check information
